# Reapo-ai

./: .env.example  .gitignore  README.md  app.jsx  changelog.md  implementation_plan.md  package-lock.json  package.json  phase1-3-production-readiness-report.md  plan.md  run.ps1  run.sh
apps/worker-indexer-py/: .tmp_langfuse_full_run.py  .tmp_langfuse_group_run.py  .tmp_parent_check.py  .tmp_phase6_obs_run.py  dev_serve_webhook.py  pyproject.toml
apps/worker-indexer-py/.mvp-state-diagnostics/index/: call_edges.json  (+3 more)
apps/worker-indexer-py/tests/: test_call_graph_linker.py  test_chat_orchestrator_service.py  test_cli_mvp.py  test_cross_file_linker.py  test_embedding_standard.py  test_encrypted_file_oauth_token_store_adapter.py  test_github_api_repository_reader_adapter.py  test_github_app_auth_service.py  test_github_app_server_auth.py  test_github_webhook_http_handler.py  test_hybrid_repository_reader_adapter.py  test_index_python_repository_service.py  test_json_file_orchestrator_state_store_adapter.py  test_langfuse_observability_adapter.py  test_local_fs_repository_reader_adapter.py  test_oauth_session_service.py  test_openai_embedding_generator_adapter.py  test_orchestrator_loop_service.py  test_persistent_adapters.py  test_python_ast_symbol_extractor.py  test_redis_queue_adapter.py  test_repo_agent_tools.py  test_research_openai_agents.py  test_research_phase5_pipeline.py  test_research_pipeline.py  test_server_runtime.py  test_sqlite_multitenant_oauth_store_adapter.py  test_startup_preconditions.py  test_webhook_index_jobs.py  test_writer_pr_service.py
(+151 files in other folders)
