[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ast-indexer"
version = "0.1.0"
description = "Python repository AST indexer with ports and adapters"
requires-python = ">=3.11"
dependencies = [
	"python-dotenv>=1.0",
	"redis>=5.0",
]

[project.optional-dependencies]
embeddings = [
	"openai>=1.40",
	"sentence-transformers>=3.0",
]
observability = [
	"langfuse>=2.0",
]
auth = [
	"PyJWT[crypto]>=2.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --cov=ast_indexer --cov-report=term-missing --cov-fail-under=60"
